feat(card): Ticket ID input text layout is formatted according to number format.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </select>
 
       <label>ID</label>
-      <input type="text" id="idInput" placeholder="Yalnızca Ticket NO">
+      <input type="number" id="idInput" placeholder="Yalnızca Ticket NO">
       <button id="downloadBtn" style="margin-top: 2rem;">PNG İndir</button>
     </div>
  <!-- SAĞ TARAF: KART ÖNİZLEME -->
