card(Style): Add new icons for info-section.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- ÜYELİK KARTI OLUŞTURMA BÖLÜMÜ -->
    <section class="info-section">
     <div class="info-box">
-      <span class="title"><i class="fas fa-icons"></i></span>
+      <span class="title"><i class="fa-regular fa-paper-plane"></i></span>
        <div class="command">/myitemsex</div>
           <p class="note">
               Bu komut, envanterinizdeki <span class="important">note kartlarının listesini</span> görmenizi sağlar ve hangi numarada olduğunu öğrenmenize yardımcı olur. Böylece bir sonraki adımlarda doğru kart üzerinde işlem yapabilirsiniz.
@@ -71,7 +71,7 @@
       </div>
     
     <div class="info-box">
-      <span class="title"><i class="fas fa-paint-brush"></i></span>
+      <span class="title"><i class="fa-regular fa-pen-to-square"></i></span>
        <div class="command">/iconpicker</div>
           <p class="note">
               Bu komutu yazdığınızda, önünüze bir ikon seçim menüsü çıkar. Menüde <span class="important">"Diğer"</span> kısmına gidip üçüncü satırın soldan dördüncü simgesini seçmelisiniz. Seçtiğiniz ikon, kartın görsel temsili olarak kullanılacaktır.
@@ -82,7 +82,7 @@
           </p>
     </div>
     <div class="info-box">
-      <span class="title"><i class="fa-solid fa-address-card"></i></span>
+      <span class="title"><i class="fa-regular fa-address-card"></i></span>
       <div class="command">/note x 1 içerik https://i.imgur.com/Assokbk.jpeg</div>
         <p class="note">
             Bu komut, kartın içerisine görsel veya metin eklemenizi sağlar. Buradaki örnek link, imgur üzerinde önceden yüklenmiş bir görseldir. Kendi hazırladığınız kart görselini kullanmak için, resmi imgura yükleyin, sağ tıklayıp “resim adresini kopyala” yapın ve linki buraya yapıştırın. Bu adım, kartın içeriğinin görsel olarak tamamlanmasını sağlar ve kartın hem görünümünü hem de işlevini tamamlar.
