--- a/index.html
+++ b/index.html
@@ -71,7 +71,38 @@
       <label>ID</label>
       <input type="number" id="idInput" placeholder="Yalnızca Ticket NO" required value="0000">
       <button id="downloadBtn" onclick="downloadCard()" type="submit" style="margin-top: 2rem;"><i class="fa-solid fa-cloud-arrow-down"></i> Kartı İndir</button>
-      <button id="shareBtn"><i class="fa-solid fa-share-nodes"></i> Paylaş</button>
+      <button id="shareBtn" style="
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 0.95rem;
+  border: none;
+  border-radius: 10px;
+  background: #1c5186;
+  color: white;
+  cursor: pointer;
+">
+  <span style="display: flex; align-items: center; gap: 8px;">
+    <i class="fa-solid fa-share-nodes"></i>
+    Paylaş
+  </span>
+
+  <!-- Sağ köşedeki etiket -->
+  <span style="
+    position: absolute;
+    right: 10px;
+    font-size: 0.65rem;
+    font-weight: 700;
+    border: 1.5px solid white;
+    border-radius: 6px;
+    padding: 3px 6px;
+    opacity: 0.85;
+  ">
+    Kullanılmıyor
+  </span>
+</button>
     </div>
  <!-- SAĞ TARAF: KART ÖNİZLEME -->
     <div class="preview">
@@ -315,18 +346,26 @@ function downloadCard() {
 */
 document.querySelectorAll('.command').forEach(cmd => {
   cmd.addEventListener('click', () => {
-    const text = cmd.textContent.trim();
+    if (cmd.dataset.cooldown === "true") {
+      showToast(`Zaten kopyalandı!`, 'error');
+      return;
+    }
 
-    navigator.clipboard.writeText(text).then(() => {
+    const originalText = cmd.textContent.trim();
+
+    navigator.clipboard.writeText(originalText).then(() => {
+      cmd.dataset.cooldown = "true"; 
       cmd.classList.add('copied');
       cmd.textContent = 'Panoya Kopyalandı!';
-      showToast(`"${text}" Kopyalandı!`, `success`);
+      showToast(`"${originalText}" panoya kopyalandı!`, 'success');
+
       setTimeout(() => {
         cmd.classList.remove('copied');
-        cmd.textContent = text;
+        cmd.textContent = originalText;
+        cmd.dataset.cooldown = "false"; 
       }, 1200);
     }).catch(() => {
-      showToast('Kopyalama aşarısız!');
+      showToast('Kopyalama başarısız!', 'error');
     });
   });
 });
@@ -345,14 +384,24 @@ function showToast(message, status, icon='fa-circle-info', duration=3000){
   }, duration);
 }
 
+let progress = 0;
 function showLink(message, url){
   linkText.textContent = `${message}`;
   linkPanel.classList.add("show");
 
-  setTimeout(() => {
-    window.location.href = `${url}`;
-    linkPanel.classList.remove("show");
-  }, 3000);
+   progress = 0;
+  const interval = setInterval(() => {
+    progress += 2;
+    linkPanel.style.setProperty('--progress', `${progress}%`);
+
+    if (progress >= 100) {
+      clearInterval(interval);
+      setTimeout(() => {
+        window.location.href = url;
+        linkPanel.classList.remove("show");
+      }, 300);
+    }
+  }, 50); 
 }
 
 window.addEventListener("pageshow", () => {
@@ -373,10 +422,11 @@ document.addEventListener('keydown', e => {
 });
 
 shareBtn.addEventListener('click', () => {
-  shareCard();
+  showToast("Paylaşım iptal edildi veya hata oluştu.", "error");
+  //shareCard();
 });
 
-async function shareCard() {
+/*async function shareCard() {
   canvas.toBlob(async (blob) => {
     if (!blob) {
       showToast("Kart oluşturulamadı!", "error");
@@ -385,7 +435,6 @@ async function shareCard() {
 
     const file = new File([blob], `${nameInput.value}-card.png`, { type: 'image/png' });
 
-    // platform tespiti
     const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
 
     if (isMobile && navigator.canShare && navigator.canShare({ files: [file] })) {
@@ -404,8 +453,9 @@ async function shareCard() {
       await navigator.clipboard.writeText(fileUrl);
       showToast("Tarayıcı paylaşımı desteklemiyor. Kart bağlantısı panoya kopyalandı!", "info");
     }
-  });
-}
+  })
+};*/
+
 </script>
 </body>
 </html>
